Move webgl related stuff to a different file Planets are now created independently from the background

--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@ body
 </head>
 <body>
 
+<script src="webgl.js"></script>
 <script src="background2d.js"></script>
 <script src="css3d.js"></script>
+<script src="planet.js"></script>
 </body>
 </html>
