Move gameplay related stuff to a different file Planets are now CSS3dObjects Each layer of planet noise can be colored differently

--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
 <title>title</title>
 
 <style>
-canvas
-{
-    position: absolute;
-}
 
 body
 {
@@ -45,5 +41,6 @@ body
 <script src="background2d.js"></script>
 <script src="css3d.js"></script>
 <script src="planet.js"></script>
+<script src="gameplay.js"></script>
 </body>
 </html>
