--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body
 </head>
 <body>
 
+<script src="math.js"></script>
 <script src="webgl.js"></script>
 <script src="background2d.js"></script>
 <script src="css3d.js"></script>
