Add audio stuff

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ body
 <body>
 
 <script src="math.js"></script>
+<!-- <script src="audio.js"></script> -->
 <script src="webgl.js"></script>
 <script src="background2d.js"></script>
 <script src="css3d.js"></script>
