Camera adjustments Improve particle explosion effect

--- a/index.html
+++ b/index.html
@@ -38,14 +38,14 @@ body
 <body>
 
 <script src="math.js"></script>
-<script src="audio.js"></script>
-<!--
+<!-- <script src="audio.js"></script> -->
+
 <script src="webgl.js"></script>
 <script src="background2d.js"></script>
 <script src="css3d.js"></script>
 <script src="particle.js"></script>
 <script src="planet.js"></script>
 <script src="gameplay.js"></script>
--->
+
 </body>
 </html>
