Add clouds (might be used later) Other small changes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@ body
 <script src="planet.js"></script>
 <script src="gameplay.js"></script>
 <script src="background2d.js"></script>
+<script src="clouds.js"></script>
 
 </body>
 </html>
