Add black holes to the gameplay

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@ body
 #overlay
 {
     opacity: 0;
-    transition: opacity 0.2s;
+    transition: opacity 0.25s;
 }
 
 #overlay.visible
 {
-    transition: opacity 0.2s 0.5s;
+    transition: opacity 0.25s 0.5s;
     opacity: 1;
 }
 
@@ -58,14 +58,15 @@ body
 
 <script src="math.js"></script>
 <script src="audio.js"></script>
-
 <script src="webgl.js"></script>
+<script src="background2d.js"></script>
+<script src="clouds.js"></script>
+
 <script src="css3d.js"></script>
 <script src="particle.js"></script>
 <script src="planet.js"></script>
+<script src="levels.js"></script>
 <script src="gameplay.js"></script>
-<script src="background2d.js"></script>
-<script src="clouds.js"></script>
 
 </body>
 </html>
