--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body
 </head>
 <body>
     <div id="ui" style="position: absolute; width: 100%; height: 100%; z-index: 10; user-select: none; pointer-events: none;">
-        <div style="width: 30vh; height: 5vh; position: absolute; top: 0px; left: 0px; background-color: black; border: 0.5vh solid #505050;">
+        <div id="boost-container" style="width: 10vh; height: 5vh; transition: width 0.5s ease; position: absolute; top: 0px; left: 0px; background-color: black; border: 0.5vh solid #505050;">
             <div id="boost-bar" style="width: 100%; height: 100%; background-color: red;"></div>
         </div>
 
